docs/api/qiskit/0.43/qiskit.algorithms.EvolutionProblem.mdx
---
title: EvolutionProblem (v0.43)
description: API reference for qiskit.algorithms.EvolutionProblem in qiskit v0.43
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.EvolutionProblem
---

# EvolutionProblem

<Class id="qiskit.algorithms.EvolutionProblem" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/evolvers/evolution_problem.py" signature="EvolutionProblem(hamiltonian, time, initial_state=None, aux_operators=None, truncation_threshold=1e-12, t_param=None, param_value_dict=None)" modifiers="class">
  Bases: `object`

  Deprecated: Evolution problem class.

  The EvolutionProblem class has been superseded by the `qiskit.algorithms.time_evolvers.TimeEvolutionProblem` class. This class will be deprecated in a future release and subsequently removed after that.

  This class is the input to time evolution algorithms and must contain information on the total evolution time, a quantum state to be evolved and under which Hamiltonian the state is evolved.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.algorithms.evolvers.evolution_problem.EvolutionProblem` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class `qiskit.algorithms.time_evolvers.TimeEvolutionProblem`. See [https://qisk.it/algo\_migration](https://qisk.it/algo_migration) for a migration guide.
  </Admonition>

  **Parameters**

  *   **hamiltonian** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – The Hamiltonian under which to evolve the system.
  *   **time** (*float*) – Total time of evolution.
  *   **initial\_state** ([*StateFn*](qiskit.opflow.state_fns.StateFn "qiskit.opflow.state_fns.StateFn")  *|*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| None*) – The quantum state to be evolved for methods like Trotterization. For variational time evolutions, where the evolution happens in an ansatz, this argument is not required.
  *   **aux\_operators** (*ListOrDict\[*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")*] | None*) – Optional list of auxiliary operators to be evaluated with the evolved `initial_state` and their expectation values returned.
  *   **truncation\_threshold** (*float*) – Defines a threshold under which values can be assumed to be 0. Used when `aux_operators` is provided.
  *   **t\_param** ([*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter") *| None*) – Time parameter in case of a time-dependent Hamiltonian. This free parameter must be within the `hamiltonian`.
  *   **param\_value\_dict** (*dict\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*, complex] | None*) – Maps free parameters in the problem to values. Depending on the algorithm, it might refer to e.g. a Hamiltonian or an initial state.

  **Raises**

  **ValueError** – If non-positive time of evolution is provided.

  ## Methods

  <span id="qiskit-algorithms-evolutionproblem-validate-params" />

  ### validate\_params

  <Function id="qiskit.algorithms.EvolutionProblem.validate_params" signature="EvolutionProblem.validate_params()">
    Checks if all parameters present in the Hamiltonian are also present in the dictionary that maps them to values.

    **Raises**

    **ValueError** – If Hamiltonian parameters cannot be bound with data provided.
  </Function>

  ## Attributes

  ### time

  <Attribute id="qiskit.algorithms.EvolutionProblem.time">
    Returns time.
  </Attribute>
</Class>

